fix: 장소 검색 결과를 서울로 제한
